overlays/staging/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: default
spec:
  rules:
    - host: lukegogogogo-staging.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: staging-mongo-express-service
                port:
                  number: 8081
